tests/negative/typecheck/conditional.orng
fn main() -> Int {0 < 1}